--- a/HomeBankingMinHub/wwwroot/account.html
+++ b/HomeBankingMinHub/wwwroot/account.html
@@ -58,8 +58,7 @@
                 </div>
                 <div class="row mt-3">
                     <div class="col">
-                        <h2 class="display-6 account">Account Number: {{ accountInfo.number }} - Balance: ${{
-                            accountInfo.balance }}</h2>
+                        <h2 class="display-6 account">Account Number: {{ accountInfo.number }} - Balance: ${{accountInfo.balance }}</h2>
                     </div>
                 </div>
                 <div class="row mt-3">
