--- a/HomeBankingMinHub/wwwroot/account.html
+++ b/HomeBankingMinHub/wwwroot/account.html
@@ -43,6 +43,18 @@
                                 Cards
                             </a>
                         </li>
+                        <li>
+                            <a href="/transfers.html" class="nav-link link-dark">
+                                <i class="bi bi-box-arrow-right"></i>
+                                Transfers
+                            </a>
+                        </li>
+                        <li>
+                            <a href="/loan-application.html" class="nav-link link-dark">
+                                <i class="bi bi-cash"></i>
+                                Loans
+                            </a>
+                        </li>
                     </ul>
                     <hr>
                     <ul class="nav nav-pills flex-column mb-auto">
@@ -58,7 +70,8 @@
                 </div>
                 <div class="row mt-3">
                     <div class="col">
-                        <h2 class="display-6 account">Account Number: {{ accountInfo.number }} - Balance: ${{accountInfo.balance }}</h2>
+                        <h2 class="display-6 account">Account Number: {{ accountInfo.number }} - Balance: ${{
+                            accountInfo.balance }}</h2>
                     </div>
                 </div>
                 <div class="row mt-3">
